# opencl_playground

./: CMakeLists.txt  main.c  main.cl  main.py  ui.c  ui.h
data_structures/: CMakeLists.txt  clist.c  clist.h  llist.c  llist.h  pool.h  vector.c  vector.h
kernels/: main.cl
